Fix issue with content overflowing the card expansion container
This will allow the expansion container to get much larger, and then scroll after it reaches the new max height.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -366,8 +366,8 @@
 
             &[maximized],
             &.maximized {
-                max-height: 15.5em;
-                overflow: visible;
+                max-height: 42em;
+                overflow-y: auto;
                 transition: .25s all linear;
 
                 .card-button-expansion {
